--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,5 +1,7 @@
 <h1>Product Inventory Page</h1>
 
+<h5>Application Name: </h5>
+<p>{{ appname }}<p>
 <h5>Name: </h5>
 <p>{{ name }}<p>
 <h5>Class: </h5>
