--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,8 +1,39 @@
-<h1>Product Inventory Page</h1>
+{% extends 'base.html' %}
 
-<h5>Application Name: </h5>
-<p>{{ appname }}<p>
-<h5>Name: </h5>
-<p>{{ name }}<p>
-<h5>Class: </h5>
-<p>{{ class }}<p>
+{% block content %}
+    <h1>Product Inventory Page</h1>
+
+    <h5>Application Name: </h5>
+    <p>{{ appname }}<p>
+    <h5>Name: </h5>
+    <p>{{ name }}<p>
+    <h5>Class: </h5>
+    <p>{{ class }}<p>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Amount</th>
+                <th>Description</th>
+                <th>Price</th>
+            </tr>
+            
+            {% comment %} Berikut cara memperlihatkan data item di bawah baris ini {% endcomment %}
+            
+            {% for item in items %}
+                <tr>
+                    <td>{{item.name}}</td>
+                    <td>{{item.amount}}</td>
+                    <td>{{item.description}}</td>
+                    <td>{{item.price}}</td>
+                </tr>
+            {% endfor %}
+        </table>
+            
+        <br />
+            
+        <a href="{% url 'main:create_item' %}">
+            <button>
+                Add New Item
+            </button>
+        </a>
+{% endblock content %}
