--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -4,22 +4,22 @@
     <style>
         /* Gaya CSS untuk latar belakang */
         body {
-            background-color: #f0f0f0;
+            background-color: #332f2f;
         }
         /* Gaya CSS untuk teks */
         h5, p {
-            color: #333;
+            color: #000000;
         }
         h1{
             color: #cf1a1a;
         }
-        /* Warna latar belakang header tabel */
-        th {
-            background-color: #c4748e;
-        }
-        /* Warna latar belakang tabel */
-        table {
-            background-color: #c9a8b2;
+        /* Warna latar belakang header kartu */
+        .card {
+            background-color: #ffffff;
+            margin: 10px;
+            padding: 10px;
+            border: 1px solid #cf1a1a;
+            border-radius: 5px;
         }
         /* Gaya CSS untuk navigation bar */
         .navbar {
@@ -52,13 +52,12 @@
 
     <div class="navbar">
         <div>
-            <h1>Product Inventory Page</h1>
+            <h1>Product Inventory</h1>
         </div>
         <div>
             <div class="profile-dropdown">
                 <a href="#">
-                    <img src="path_to_profile_icon.png" alt="Profile" width="30" height="30">
-                    Hi, {{ username }}
+                    Hi, {{ name }}!
                 </a>
                 <div class="profile-dropdown-content">
                     <a href="{% url 'main:logout' %}">Logout</a>
@@ -66,57 +65,88 @@
             </div>
         </div>
     </div>
-
-    <h5>Application Name: </h5>
-    <p>{{ appname }}<p>
-    <h5>Name: </h5>
-    <p>{{ name }}<p>
-    <h5>Class: </h5>
-    <p>{{ class }}<p>
-        <table>
-            <tr>
-                <th>Name</th>
-                <th>Amount</th>
-                <th>Description</th>
-                <th>Price</th>
-            </tr>
-            
-            {% comment %} Berikut cara memperlihatkan data item di bawah baris ini {% endcomment %}
-            
+        
+        <div id="item_card" class="card-container">
             {% for item in items %}
-                <tr>
-                    <td>{{item.name}}</td>
-                    <td>{{item.amount}}</td>
-                    <td>{{item.description}}</td>
-                    <td>{{item.price}}</td>
-                    <td>
+                <div class="card">
+                    <h3>{{item.name}}</h3>
+                    <p>Amount: {{item.amount}}</p>
+                    <p>Description: {{item.description}}</p>
+                    <p>Price: {{item.price}}</p>
+                    <div class="card-buttons">
                         <a href="{% url 'main:edit_item' item.pk %}">
-                            <button>
-                                Edit
-                            </button>
+                            <button>Edit</button>
                         </a>
                         <a href="{% url 'main:delete_item' item.pk %}">
-                            <button>
-                                Delete
-                            </button>
+                            <button>Delete</button>
                         </a>
-                    </td>
-                </tr>
+                    </div>
+                </div>
             {% endfor %}
-        </table>
+        </div>
             
-        <br />
-            
-        <a href="{% url 'main:create_item' %}">
+        <br /><a href="{% url 'main:create_item' %}">
             <button>
                 Add New Item
             </button>
         </a>
 
-        <a href="{% url 'main:logout' %}">
-            <button>
-                Logout
-            </button>
-        </a>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Add New Item</button>
+
         <h5>Sesi terakhir login: {{ last_login }}</h5>
+     
+        <script>
+            async function getItems() {
+                return fetch("{% url 'main:get_item_json' %}").then((res) => res.json())
+            }
+
+            function addItem() {
+                fetch("{% url 'main:add_item_ajax' %}", {
+                    method: "POST",
+                    body: new FormData(document.querySelector('#form'))
+                })
+
+                document.getElementById("form").reset()
+                return false
+            }
+
+            document.getElementById("button_add").onclick = addItem
+        </script>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Add New Item</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="form" onsubmit="return false;">
+                    {% csrf_token %}
+                    <div class="mb-3">
+                        <label for="name" class="col-form-label">Name:</label>
+                        <input type="text" class="form-control" id="name" name="name"></input>
+                    </div>
+                    <div class="mb-3">
+                        <label for="amount class="col-form-label">Amount:</label>
+                        <input type="number" class="form-control" id="amount" name="amount></input>
+                    </div>
+                    <div class="mb-3">
+                        <label for="description" class="col-form-label">Description:</label>
+                        <textarea class="form-control" id="description" name="description"></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label for="price" class="col-form-label">Price:</label>
+                        <input type="number" class="form-control" id="price" name="price"></input>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" id="button_add" data-bs-dismiss="modal">Add Item</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock content %}
